// ============================================================================
// DocumentStore Dependency Injection Module
// ============================================================================
// 
// @file DocumentStoreModule.kt
// @version 1.0.0
// @author Unhinged Team
// @date 2025-01-04
// @description Koin DI module for DocumentStore service components
// 
// This module provides:
// - DocumentStore gRPC service registration
// - Repository implementations with database connections
// - Event emitter with CDC integration
// - LLM-native service configurations
// - Performance monitoring and metrics collection
// 
// LLM-Native Features:
// - Session context optimization for prompt construction
// - Semantic analysis integration for document processing
// - Real-time event emission for workflow orchestration
// - Intelligent caching strategies for frequently accessed documents
// ============================================================================

package com.unhinged.di

import com.unhinged.services.documentstore.*
import org.koin.core.qualifier.named
import org.koin.dsl.module
import org.slf4j.LoggerFactory
import unhinged.cdc.CDCServiceGrpcKt
import javax.sql.DataSource

/**
 * DocumentStore service dependency injection module
 * 
 * Provides all components needed for the DocumentStore service:
 * - gRPC service implementation
 * - Repository layer with database access
 * - Event emission with CDC integration
 * - Performance monitoring and health checks
 * 
 * Dependencies:
 * - DatabaseModule: For database connections and transaction management
 * - CDCModule: For event streaming and change data capture
 * - ConfigurationModule: For service configuration and environment settings
 * 
 * @since 1.0.0
 * @author Unhinged Team
 */
val documentStoreModule = module {
    
    // ========================================================================
    // Repository Layer
    // ========================================================================
    
    /**
     * DocumentRepository implementation with PostgreSQL backend
     * 
     * Features:
     * - LLM-optimized session context queries
     * - High-performance JSONB document storage
     * - Intelligent document ranking for prompt construction
     * - Automatic metadata extraction and indexing
     * - Version management with tag-based serving
     */
    single<DocumentRepository> {
        val logger = LoggerFactory.getLogger("DocumentStoreModule")
        logger.info("Initializing DocumentRepository with PostgreSQL backend")
        
        DocumentRepositoryImpl(
            primaryDataSource = get(named("primary")),
            readOnlyDataSource = get(named("readonly")),
            transactionManager = get()
        )
    }
    
    // ========================================================================
    // Event Emission Layer
    // ========================================================================
    
    /**
     * DocumentEventEmitter implementation with CDC integration
     * 
     * Features:
     * - Real-time event emission for all document operations
     * - Semantic change detection for intelligent workflow triggers
     * - Session context invalidation events for prompt cache management
     * - Document relevance scoring updates for search optimization
     * - Batch event publishing for high-throughput scenarios
     */
    single<DocumentEventEmitter> {
        val logger = LoggerFactory.getLogger("DocumentStoreModule")
        logger.info("Initializing DocumentEventEmitter with CDC integration")
        
        DocumentEventEmitterImpl(
            cdcService = get(),
            eventBatchSize = get<com.typesafe.config.Config>().getInt("events.batch.size"),
            eventTimeoutMs = get<com.typesafe.config.Config>().getLong("events.timeout.ms")
        )
    }
    
    // ========================================================================
    // Service Layer
    // ========================================================================
    
    /**
     * DocumentStore gRPC service implementation
     * 
     * Features:
     * - Complete gRPC API with 11 endpoints
     * - LLM-native session context aggregation
     * - Automatic versioning and tagging
     * - Real-time event emission for workflow orchestration
     * - Comprehensive error handling and retry logic
     */
    single<DocumentStoreService> {
        val logger = LoggerFactory.getLogger("DocumentStoreModule")
        logger.info("Initializing DocumentStoreService with LLM-native features")
        
        DocumentStoreService(
            documentRepository = get(),
            eventEmitter = get(),
            sessionContextOptimizer = get(),
            documentAnalyzer = get()
        )
    }
    
    // ========================================================================
    // LLM-Native Components
    // ========================================================================
    
    /**
     * Session context optimizer for LLM prompt construction
     *
     * Features:
     * - Intelligent document ranking by relevance and recency
     * - Token count estimation for context window management
     * - Content summarization for large documents
     * - Semantic similarity scoring for context relevance
     */
    single<SessionContextOptimizer> {
        val logger = LoggerFactory.getLogger("DocumentStoreModule")
        logger.info("Initializing SessionContextOptimizer for LLM prompt construction")

        SimpleSessionContextOptimizer(
            maxContextTokens = get<com.typesafe.config.Config>().getInt("llm.context.max_tokens"),
            relevanceThreshold = get<com.typesafe.config.Config>().getDouble("llm.context.relevance_threshold"),
            recencyWeight = get<com.typesafe.config.Config>().getDouble("llm.context.recency_weight")
        )
    }
    
    /**
     * Document analyzer for semantic processing
     * 
     * Features:
     * - Content type detection and classification
     * - Automatic metadata extraction from document content
     * - Semantic tagging based on content analysis
     * - Token count estimation for various LLM models
     */
    single<DocumentAnalyzer> {
        val logger = LoggerFactory.getLogger("DocumentStoreModule")
        logger.info("Initializing DocumentAnalyzer for semantic processing")

        SimpleDocumentAnalyzer(
            enableSemanticAnalysis = get<com.typesafe.config.Config>().getBoolean("document.analysis.semantic.enabled"),
            enableAutoTagging = get<com.typesafe.config.Config>().getBoolean("document.analysis.auto_tagging.enabled"),
            tokenEstimationModel = get<com.typesafe.config.Config>().getString("document.analysis.token_model")
        )
    }
    
    // ========================================================================
    // Performance and Monitoring
    // ========================================================================
    
    /**
     * DocumentStore metrics collector for monitoring and alerting
     * 
     * Features:
     * - Operation latency tracking
     * - Throughput monitoring
     * - Error rate analysis
     * - Cache hit/miss ratios
     * - Session context performance metrics
     */
    single<DocumentStoreMetrics> {
        val logger = LoggerFactory.getLogger("DocumentStoreModule")
        logger.info("Initializing DocumentStoreMetrics for performance monitoring")

        SimpleDocumentStoreMetrics(
            metricsRegistry = null, // TODO: Add actual metrics registry
            enableDetailedMetrics = get<com.typesafe.config.Config>().getBoolean("metrics.detailed.enabled")
        )
    }
    
    /**
     * DocumentStore health checker for service monitoring
     * 
     * Features:
     * - Database connectivity checks
     * - CDC service connectivity validation
     * - Repository operation health verification
     * - Performance threshold monitoring
     */
    single<DocumentStoreHealthChecker> {
        val logger = LoggerFactory.getLogger("DocumentStoreModule")
        logger.info("Initializing DocumentStoreHealthChecker for service monitoring")

        SimpleDocumentStoreHealthChecker(
            documentRepository = get(),
            eventEmitter = get(),
            databaseHealthChecker = get(),
            healthCheckTimeoutMs = get<com.typesafe.config.Config>().getLong("health.check.timeout.ms")
        )
    }
    
    // ========================================================================
    // Caching Layer
    // ========================================================================
    
    /**
     * Document cache for frequently accessed documents
     * 
     * Features:
     * - LRU cache with TTL expiration
     * - Session-based cache partitioning
     * - Intelligent cache invalidation on document updates
     * - Cache warming for popular documents
     */
    single<DocumentCache> {
        val logger = LoggerFactory.getLogger("DocumentStoreModule")
        logger.info("Initializing DocumentCache for performance optimization")

        SimpleDocumentCache(
            maxCacheSize = get<com.typesafe.config.Config>().getInt("cache.document.max_size"),
            ttlMinutes = get<com.typesafe.config.Config>().getLong("cache.document.ttl_minutes"),
            enableCacheWarming = get<com.typesafe.config.Config>().getBoolean("cache.document.warming.enabled")
        )
    }
}

// ========================================================================
// Component Interfaces (to be implemented)
// ========================================================================

/**
 * Session context optimizer interface for LLM prompt construction
 */
interface SessionContextOptimizer {
    suspend fun optimizeContextForPrompt(
        documents: List<unhinged.document_store.DocumentStore.Document>,
        maxTokens: Int
    ): List<unhinged.document_store.DocumentStore.Document>
    
    fun estimateTokenCount(content: String): Int
    fun calculateRelevanceScore(document: unhinged.document_store.DocumentStore.Document): Double
}

/**
 * Document analyzer interface for semantic processing
 */
interface DocumentAnalyzer {
    suspend fun analyzeDocument(document: unhinged.document_store.DocumentStore.Document): DocumentAnalysis
    fun extractMetadata(content: String): Map<String, Any>
    fun generateSemanticTags(content: String): List<String>
}

/**
 * Document analysis result
 */
data class DocumentAnalysis(
    val contentType: String,
    val estimatedTokens: Int,
    val semanticTags: List<String>,
    val extractedMetadata: Map<String, Any>,
    val relevanceScore: Double,
    val summary: String?
)

/**
 * DocumentStore metrics collector interface
 */
interface DocumentStoreMetrics {
    fun recordOperationLatency(operation: String, latencyMs: Long)
    fun incrementOperationCount(operation: String)
    fun recordCacheHit(cacheType: String)
    fun recordCacheMiss(cacheType: String)
    fun recordSessionContextSize(sessionId: String, documentCount: Int, tokenCount: Int)
}

/**
 * DocumentStore health checker interface
 */
interface DocumentStoreHealthChecker {
    suspend fun checkHealth(): HealthStatus
    suspend fun checkDatabaseHealth(): Boolean
    suspend fun checkEventEmitterHealth(): Boolean
}

/**
 * Health status result
 */
data class HealthStatus(
    val isHealthy: Boolean,
    val status: String,
    val details: Map<String, Any>,
    val timestamp: Long = System.currentTimeMillis()
)

/**
 * Document cache interface
 */
interface DocumentCache {
    suspend fun get(key: String): unhinged.document_store.DocumentStore.Document?
    suspend fun put(key: String, document: unhinged.document_store.DocumentStore.Document)
    suspend fun invalidate(key: String)
    suspend fun invalidateByPattern(pattern: String)
    fun getStats(): CacheStats
}

/**
 * Cache statistics
 */
data class CacheStats(
    val hitCount: Long,
    val missCount: Long,
    val evictionCount: Long,
    val size: Long,
    val hitRate: Double
)
